All cells run correctly

--- a/.gitignore
+++ b/.gitignore
@@ -57,3 +57,4 @@ htmlcov/
 
 # Generated images (if they're outputs, not source)
 # images/*.png  # Uncomment if images are generated outputs
+docs/
